@@ -1,3 +1,8 @@
+1999-09-08  Leif Hedstrom  <leif@perldap.org>
+
+	* Conn.pm, Entry.pm: Changed \* to be \& when creating function
+	aliases.
+
 1999-09-09  Kevin McCarthy  <kevin@perldap.org>
 
 	* Conn.pm (update): Fixed potential bug with scalar(@add) and @remove
